grammar.js
    structure: $ => semiList($.structure_item),

    structure_item: $ => choice(
      $.type_definition,
      $.struct_definition,
      $.enum_definition,
      $.value_definition,
      $.function_definition,
      $.test_definition,
      $.trait_definition,
      $.impl_definition,
    ),

    visibility: $ => choice(
      'priv',
      seq('pub', optional($.pub_attribute))
    ),

    pub_attribute: _ => seq('(', 'readonly', ')'),

    type_definition: $ => seq(
      optional($.visibility),
      'type',
      $.identifier,
      optional($.type_parameters),
      optional($.type),
      optional($.derive_directive),
    ),

    struct_definition: $ => seq(
      optional($.visibility),
      'struct',
      $.identifier,
      optional($.type_parameters),
      '{',
      semiList($.struct_field_declaration),
      '}',
      optional($.derive_directive),
    ),

    struct_field_declaration: $ => seq(
      optional($.visibility),
      optional($.mutability),
      $.lowercase_identifier,
      $.colon,
      $.type
    ),

    enum_definition: $ => seq(
      optional($.visibility),
      'enum',
      $.identifier,
      optional($.type_parameters),
      '{',
      semiList($.enum_constructor),
      '}',
      optional($.derive_directive),
    ),

    enum_constructor: $ => seq(
      $.uppercase_identifier,
      optional(seq(
        '(',
        commaList1($.type),
        ')'
      ))
    ),

    value_definition: $ => seq(
      optional($.pub),
      'let',
      $.lowercase_identifier,
      optional($.type_annotation),
      '=',
      $.expression
    ),

    function_definition: $ => seq(
      optional($.pub),
      'fn',
      $.function_identifier,
      optional($.type_parameters),
      optional($.parameters),
      optional($.return_type),
      $.block_expression,
    ),

    trait_definition: $ => seq(
      optional($.pub),
      'trait',
      $.identifier,
      optional($.super_trait_declaration),
      '{',
      semiList($.trait_method_declaration),
      '}'
    ),

    super_trait_declaration: $ => seq(
      $.colon,
      plusList($.identifier),
    ),

    trait_method_declaration: $ => seq(
      $.function_identifier,
      '(',
      commaList($.type),
      ')',
      $.return_type,
    ),

    impl_definition: $ => seq(
      'impl',
      $.qualified_type_identifier,
      $.colon_colon,
      $.function_identifier,
      $.parameters,
      optional($.return_type),
      $.block_expression,
    ),

    expression: $ => choice(
      $.simple_expression,
      $.if_expression,
      $.loop_expression,
      $.match_expression,
      $.for_expression,
    ),

    simple_expression: $ => choice(
      $.atomic_expression,
      $.qualified_identifier,
      $.unary_expression,
      $.binary_expression,
      $.struct_expression,
      $.nonempty_block_expression,
      $.anonymous_lambda_expression,
      $.anonymous_matrix_lambda_expression,
      $.constructor_expression,
      $.apply_expression,
      $.array_access_expression,
      $.dot_apply_expression,
      $.access_expression,
      $.method_expression,
      $.unit_expression,
      $.tuple_expression,
      $.constraint_expression,
      $.array_expression,
      $.unwrap_expression,
      '_'
    ),

    atomic_expression: $ => choice(
      $.string_interpolation,
      $.literal
    ),

    string_interpolation: $ => seq(
      '"',
      repeat($.string_fragment),
      $.interpolator,
      repeat(choice(
        $.string_fragment,
        $.interpolator
      )),
      '"'
    ),

    interpolator: $ => seq(
      '\\(',
      $.expression,
      ')'
    ),

    literal: $ => choice(
      $.boolean_literal,
      $.float_literal,
      $.integer_literal,
      $.byte_literal,
      $.char_literal,
      $.string_literal,
      $.multiline_string_literal,
    ),

    integer_literal: _ => token(choice(
      /[0-9][0-9_]*L?/,
      /0[xX][0-9a-fA-F_]+L?/,
      /0[oO][0-7_]+L?/,
      /0[bB][01_]+L?/,
    )),

    // integerPart = /[0-9][_0-9]*/,
    // decimalPart = /[_0-9]+/,
    // exponentPart = /[eE][0-9][_0-9]*/,
    // float_literal: _ => /[0-9][_0-9]*\.[_0-9]*([eE][0-9][_0-9]*)?/,

    byte_literal: $ => seq(
      'b\'',
      choice(
        $.escape_sequence,
        token.immediate(/[^']/)
      ),
      '\''
    ),

    char_literal: $ => seq(
      '\'',
      choice(
        $.escape_sequence,
        token.immediate(/[^']/)
      ),
      '\''
    ),

    string_literal: $ => seq(
      '"',
      repeat($.string_fragment),
      '"'
    ),

    string_fragment: $ => choice(
      $.unescaped_string_fragment,
      $.escape_sequence
    ),

    unescaped_string_fragment: _ => choice(
      token.immediate(/\\[^ntb"\\]/),
      token.immediate(/[^"\\]+/),
    ),

    escape_sequence: _ => choice(
      // \n, \t, \b, \", \\
      token.immediate(/\\[ntb"\\]/),
      // octal
      token.immediate(/\\o[0-7]{1,3}/),
      // hex
      token.immediate(/\\x[0-9a-fA-F]{1,2}/),
      token.immediate(/\\x\{[0-9a-fA-F]+\}/),
      // unicode
      token.immediate(/\\u[0-9a-fA-F]{4}/),
      token.immediate(/\\u\{[0-9a-fA-F]+\}/),
    ),

    block_expression: $ => seq(
      '{',
      semiList($.statement_expression),
      '}',
    ),

    constructor_expression: $ => choice(
      $.uppercase_identifier,
      seq($.qualified_type_identifier, $.colon_colon, $.uppercase_identifier)
    ),

    apply_expression: $ => prec(PREC.apply, seq(
      field('method', $.simple_expression),
      '(',
      commaList(seq(optional(seq($.labeled_identifier, '=')), $.expression)),
      ')'
    )),

    dot_apply_expression: $ => prec(PREC.apply, seq(
      $.simple_expression,
      $.dot_identifier,
      '(',
      commaList(seq(optional(seq($.labeled_identifier, '=')), $.expression)),
      ')'
    )),

    access_expression: $ => prec(PREC.access, seq(
      $.simple_expression,
      $.accessor
    )),

    accessor: $ => choice(
      $.dot_identifier,
      seq($.dot_operator, /[0-9]+/)
    ),

    match_expression: $ => seq(
      'match',
      $.simple_expression,
      '{',
      semiList($.case_clause),
      '}'
    ),

    case_clause: $ => seq(
      $.pattern,
      '=>',
      $.case_clause_body,
    ),

    case_clause_body: $ => choice(
      $.assign_expression,
      $.while_expression,
      seq('break', commaList($.expression)),
      seq('continue', commaList($.expression)),
      $.return_expression,
      $.expression,
    ),

    statement_expression: $ => choice(
      $.let_expression,
      $.let_mut_expression,
      $.assign_expression,
      $.named_lambda_expression,
      $.named_matrix_expression,
      $.while_expression,
      seq('break', commaList($.expression)),
      seq('continue', commaList($.expression)),
      $.return_expression,
      $.expression
    ),

    let_expression: $ => seq(
      'let',
      $.pattern,
      optional($.type_annotation),
      '=',
      $.expression
    ),

    pattern: $ => choice(
      $.simple_pattern,
      $.as_pattern,
      $.or_pattern
    ),

    simple_pattern: $ => choice(
      '_',
      seq('(', $.pattern, ')'),
      $.literal,
      $.lowercase_identifier,
      $.constructor_pattern,
      $.tuple_pattern,
      $.constraint_pattern,
      $.array_pattern,
      $.struct_pattern
    ),

    constructor_pattern: $ => seq(
      $.constructor_expression,
      optional(seq(
        '(',
        commaList1($.pattern),
        ')'
      ))
    ),

    type: $ => choice(
      $.tuple_type,
      $.function_type,
      $.apply_type,
      $.any
    ),

    apply_type: $ => seq($.qualified_type_identifier, optional($.type_arguments)),

    type_arguments: $ => seq(
      '[',
      commaList1($.type),
      ']'
    ),

    type_parameters: $ => seq(
      '[',
      commaList1($.type_identifier),
      ']'
    ),

    type_annotation: $ => seq($.colon, $.type),

    return_type: $ => seq('->', $.type),

    parameter: $ => seq(
      choice($.lowercase_identifier, $.labeled_identifier),
      optional($.type_annotation),
      optional(seq('=', $.expression)),
    ),

    parameters: $ => seq(
      '(',
      commaList($.parameter),
      ')'
    ),

    mutability: _ => 'mut',
    pub: _ => 'pub',

    // Identifiers
    uppercase_identifier: _ => /[\p{Uppercase_Letter}][_\p{XID_Continue}]*/,
    lowercase_identifier: _ => /[_[\p{XID_Start}--\p{Uppercase_Letter}]][_\p{XID_Continue}]*/v,
    identifier: $ => choice(
      $.uppercase_identifier,
      $.lowercase_identifier,
    ),

    dot_operator: _ => '.',

    // colon_colon: _ => '::',

    dot_identifier: $ => seq(
      $.dot_operator,
      $.inner_dot_identifier,
    ),
    inner_dot_identifier: _ => /[_\p{XID_Start}][_\p{XID_Continue}]*/,

    labeled_identifier: $ => /~[_\p{XID_Start}][_\p{XID_Continue}]*/,

    qualified_identifier: $ => choice(
      $.lowercase_identifier,
      seq($.package_identifier, $.dot_identifier)
    ),
    qualified_type_identifier: $ => choice(
      $.identifier,
      seq($.package_identifier, $.dot_identifier)
    ),

    function_identifier: $ => choice(
      $.lowercase_identifier,
      seq($.qualified_type_identifier, $.colon_colon, $.lowercase_identifier)
    ),

    type_identifier: $ => choice(
      $.identifier,
      seq($.identifier, $.colon, $.constraints)
    ),

    comment: _ => /\/\/[^/].*/,
